docs(docs-infra): fix docs pages overflow when specific example-viewer exists
enforce content to be fluid until a specific max width, and rollback breakpoints to be applied when 1430px is the current win size
as widths between 1430px and 1431px will be broken

--- a/adev/src/app/features/tutorial/tutorial.component.scss
+++ b/adev/src/app/features/tutorial/tutorial.component.scss
@@ -94,7 +94,7 @@ $column-width: calc(50% - #{$resizer-width} - var(--layout-padding));
   .docs-viewer {
 
     //applying styles when TOC position got translated to the top right 
-    @media only screen and (min-width: 1431px) {
+    @include mq.for-large-desktop-up{
       // take the available space except a reserved area for TOC
       margin-left: 0rem;
       width: unset;
