--- a/adev/src/app/features/references/cli-reference-details-page/cli-reference-details-page.component.scss
+++ b/adev/src/app/features/references/cli-reference-details-page/cli-reference-details-page.component.scss
@@ -12,7 +12,7 @@
 
 
   //applying styles when TOC position got translated to the top right 
-  @media only screen and (min-width: 1431px) {
+  @include mq.for-large-desktop-up{
     // take the available space except a reserved area for TOC
     width: calc(100% - 16rem);
   }
@@ -24,7 +24,7 @@
     width: 100%;
 
     //applying styles when TOC position got translated to the top right 
-    @media only screen and (min-width: 1431px) {
+    @include mq.for-large-desktop-up{
       // take the available space except a reserved area for TOC
       max-width: var(--page-width);
     }
